--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>jQuery</title>
 	<script
   		src="http://code.jquery.com/jquery-3.3.1.min.js"
@@ -10,6 +11,11 @@
   		crossorigin="anonymous">
   	</script>
   	<script src="scripts/jQuery.js"></script>
+  	<style>
+  		.stripe {
+			background-color: darksalmon;
+		}
+ 	</style>
   </head>
   <body>
   	<header>
@@ -22,5 +28,46 @@
 
   	<p id="legal">fjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja ;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjks daffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldf jsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda; fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdaf jksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj; ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjkl da;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfs dafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sld fj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaff jklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsda jfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja; sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksd affjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfj sdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaffjklda;fja;sldfj;ldfjsdajfsdafjksdaf</p>
   	
+  	<div>
+  		<table id="classList" class="data">
+  			<thead>
+  				<tr>
+  					<th>ID</th>
+  					<th>First Name</th>
+  					<th>Last Name</th>
+  				</tr>
+  			</thead>
+  			<tbody>
+  				<tr>
+  					<td>ACALAB1</td>
+  					<td>Corbin</td>
+  					<td>Stickley</td>
+  				</tr>
+  				<tr>
+  					<td>ACALAB2</td>
+  					<td>Jay</td>
+  					<td>Warmke</td>
+  				</tr>
+  				<tr>
+  					<td>ACALAB3</td>
+  					<td>Evan</td>
+  					<td>Tone</td>
+  				</tr>
+  			</tbody>
+  		</table>
+  	</div>
+
+  	<div>
+  	</div>
+
+  	<div>
+  	</div>
+
+  	<div>
+  	</div>
+
+  	<div>
+  	</div>
+
   </body>
   </html>
