--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   		crossorigin="anonymous">
   	</script>
+  	<script
+  		src="https://code.jquery.com/color/jquery.color-2.1.2.min.js"
+  		integrity="sha256-H28SdxWrZ387Ldn0qogCzFiUDDxfPiNIyJX7BECQkDE="
+  		crossorigin="anonymous">	
+  	</script>
   	<script src="scripts/jQuery.js"></script>
   	<style>
   		.stripe {
@@ -49,7 +54,7 @@
   					<td>Warmke</td>
   				</tr>
   				<tr>
-  					<td>ACALAB3</td>
+  					<td>ACALAB10</td>
   					<td>Evan</td>
   					<td>Tone</td>
   				</tr>
@@ -66,7 +71,10 @@
   	<div>
   	</div>
 
-  	<div>
+  	<button type="button" id="switch">Slazo</button>
+
+  	<div id="stuff">
+  		<p>fjsda;lfjdskal;fns;vahsakl;fjsklda;knfdas;v;lsafjk;lsdajfkl; sadkfljsakfljsdiafnsd;avklafj;klsdajfkl;sjfklsjdaflnsda;lfjskalfsda;vnajrfkl;efnkl;sdanfl;skdankldsfjkl sdklfjskdalfjskld;fjskldfjskldfjfjkldsfjklds;jfiefjkl;sajdfkl;dsj kl;jfklds;ajfskldfjskldjfskdlfjskld;fjskd;ljfk;sldfjkl;sdjfilkejk;flsavniornej;kvnsklafkl;dsjfkljdskfljsdklfjsklnefs sjfdkl;sdjfenfioefioioesfkljsklfjdsklfjskldfjksldjfklsdjfksldfjksdjkf sfiueiofmsdanvlsjdfklsdjklfsndklfjsdklfjsdklfjskldfjskljkldfjskl jfskld</p>
   	</div>
 
   </body>
